--- a/_config.yml
+++ b/_config.yml
@@ -2,19 +2,21 @@
 title: Tommaso Di Francesco
 position: Postdoctoral Researcher
 affiliation: University of Bonn — Department of Economics (Finance Group)
-email: t.difrancesco@uva.nl
+email: t.difrancesco@uni-bonn.de
 
 # Search Engine Optimization (SEO)
 keywords: behavioral macro-finance, heterogeneous expectations, agent-based models, expectation formation, financial markets
 description: Academic homepage of Tommaso Di Francesco, Postdoctoral Researcher in Finance at the University of Bonn. Research on behavioral macro-finance, heterogeneous beliefs, and agent-based models.
-canonical: https://YOUR-USERNAME.github.io/
+canonical: https://tommasodf.github.io/
 
 # Links
 google_scholar: https://scholar.google.com/citations?user=3JjzZZkAAAAJ&hl=it
-cv_link: /assets/files/cv_template.pdf
+cv_link: /assets/files/CV_template.pdf
 github_link: https://github.com/TommasoDF
-linkedin: https://www.linkedin.com/
-twitter: https://twitter.com/
+linkedin: https://www.linkedin.com/in/tommaso-di-francesco-03b967184/
+#twitter: https://twitter.com/
+orcid: https://orcid.org/0009-0003-3209-4320
+
 
 # Images
 avatar: /assets/img/fototessera_old.jpg
@@ -32,7 +34,7 @@ font: "Serif"
 
 # Google Analytics
 # Remove or comment out if unused
-google_analytics: UA-111540567-4
+#google_analytics: UA-111540567-4
 
 # Remote theme
 remote_theme: yaoyao-liu/minimal-light
